docs/reviews/bin001_gates_exact_HEAD.txt
=== FOCUSED ===
.....................F                                                   [100%]
=================================== FAILURES ===================================
_____________________________ test_no_network_used _____________________________
tests/ingest/market/test_binance_kline.py:428: in test_no_network_used
    text = src.read_text(encoding="utf-8")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../.local/share/uv/python/cpython-3.13.14-linux-x86_64-gnu/lib/python3.13/pathlib/_local.py:546: in read_text
    return PathBase.read_text(self, encoding, errors, newline)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../.local/share/uv/python/cpython-3.13.14-linux-x86_64-gnu/lib/python3.13/pathlib/_abc.py:632: in read_text
    with self.open(mode='r', encoding=encoding, errors=errors, newline=newline) as f:
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../.local/share/uv/python/cpython-3.13.14-linux-x86_64-gnu/lib/python3.13/pathlib/_local.py:537: in open
    return io.open(self, mode, buffering, encoding, errors, newline)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   FileNotFoundError: [Errno 2] No such file or directory: '/home/lars/Crypto_Multifactor_Bot/tests/cryptofactors/ingest/binance.py'
=========================== short test summary info ============================
FAILED tests/ingest/market/test_binance_kline.py::test_no_network_used - File...
=== RUFF ===
F401 [*] `cryptofactors.catalog.dataset.catalog_store.SqliteDatasetCatalog` imported but unused
  --> tests/ingest/market/test_binance_kline.py:22:57
   |
21 | from cryptofactors.audit.models import IssueSeverity
22 | from cryptofactors.catalog.dataset.catalog_store import SqliteDatasetCatalog
   |                                                         ^^^^^^^^^^^^^^^^^^^^
23 | from cryptofactors.catalog.dataset.models import (
24 |     DatasetStoreConfig,
   |
help: Remove unused import: `cryptofactors.catalog.dataset.catalog_store.SqliteDatasetCatalog`

F401 [*] `cryptofactors.catalog.dataset.models.DatasetStoreConfig` imported but unused
  --> tests/ingest/market/test_binance_kline.py:24:5
   |
22 | from cryptofactors.catalog.dataset.catalog_store import SqliteDatasetCatalog
23 | from cryptofactors.catalog.dataset.models import (
24 |     DatasetStoreConfig,
   |     ^^^^^^^^^^^^^^^^^^
25 |     DependencyRef,
26 |     DependencyKind,
   |
help: Remove unused import

F401 [*] `cryptofactors.catalog.dataset.models.DependencyRef` imported but unused
  --> tests/ingest/market/test_binance_kline.py:25:5
   |
23 | from cryptofactors.catalog.dataset.models import (
24 |     DatasetStoreConfig,
25 |     DependencyRef,
   |     ^^^^^^^^^^^^^
26 |     DependencyKind,
27 |     PublishPlan,
   |
help: Remove unused import

F401 [*] `cryptofactors.catalog.dataset.models.DependencyKind` imported but unused
  --> tests/ingest/market/test_binance_kline.py:26:5
   |
24 |     DatasetStoreConfig,
25 |     DependencyRef,
26 |     DependencyKind,
   |     ^^^^^^^^^^^^^^
27 |     PublishPlan,
28 |     RowCountPolicy,
   |
help: Remove unused import

Found 4 errors.
[*] 4 fixable with the `--fix` option.
=== MYPY ===
tests/ingest/market/test_binance_kline.py:403: error: Function is missing a return type annotation  [no-untyped-def]
Found 1 error in 1 file (checked 13 source files)
=== FULL ===
........................................................................ [ 22%]
...............................F........................................ [ 45%]
........................................................................ [ 67%]
........................................................................ [ 90%]
...............................                                          [100%]
=================================== FAILURES ===================================
_____________________________ test_no_network_used _____________________________

    def test_no_network_used() -> None:
        src = Path(__file__).resolve().parents[2] / "cryptofactors" / "ingest" / "binance.py"
>       text = src.read_text(encoding="utf-8")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

tests/ingest/market/test_binance_kline.py:428: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
../.local/share/uv/python/cpython-3.13.14-linux-x86_64-gnu/lib/python3.13/pathlib/_local.py:546: in read_text
    return PathBase.read_text(self, encoding, errors, newline)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../.local/share/uv/python/cpython-3.13.14-linux-x86_64-gnu/lib/python3.13/pathlib/_abc.py:632: in read_text
    with self.open(mode='r', encoding=encoding, errors=errors, newline=newline) as f:
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

self = PosixPath('/home/lars/Crypto_Multifactor_Bot/tests/cryptofactors/ingest/binance.py')
mode = 'r', buffering = -1, encoding = 'utf-8', errors = None, newline = None

    def open(self, mode='r', buffering=-1, encoding=None,
             errors=None, newline=None):
        """
        Open the file pointed to by this path and return a file object, as
        the built-in open() function does.
        """
        if "b" not in mode:
            encoding = io.text_encoding(encoding)
>       return io.open(self, mode, buffering, encoding, errors, newline)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E       FileNotFoundError: [Errno 2] No such file or directory: '/home/lars/Crypto_Multifactor_Bot/tests/cryptofactors/ingest/binance.py'

../.local/share/uv/python/cpython-3.13.14-linux-x86_64-gnu/lib/python3.13/pathlib/_local.py:537: FileNotFoundError
=============================== warnings summary ===============================
tests/test_archives.py::test_duplicate_member_names
  /home/lars/.local/share/uv/python/cpython-3.13.14-linux-x86_64-gnu/lib/python3.13/zipfile/__init__.py:1661: UserWarning: Duplicate name: 'a.csv'
    return self._open_to_write(zinfo, force_zip64=force_zip64)

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
FAILED tests/ingest/market/test_binance_kline.py::test_no_network_used - File...
=== REPO CONTROL ===
Repo control check: PASS
=== HEAD ===
2df75b2ed1d247eb409613e9e5e0aaac6eae3d41
